feat: basic conway simulation complete